Fix content padding on mobile

--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -9,6 +9,8 @@
   max-width: 1200px;
   position: relative;
   margin: auto;
+  padding-left: 40px;
+  padding-right: 40px;
 }
 
 .main {
