--- a/_sass/header.scss
+++ b/_sass/header.scss
@@ -49,8 +49,8 @@
     }
   }
 
-  @media only screen and (max-width: 500px) {
-    font-size: 2em;
+  @media only screen and (max-width: 550px) {
+    font-size: 2.5em;
   }
 }
 
